2007-02-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/TransferHandler.java
	(SwingDragGestureRecognizer): New inner class.
	(SwingDragHandler): New inner class.
	(recognizer): New field.
	(exportAsDrag): Implemented missing method.

2007-02-10  Roman Kennke  <kennke@aicas.com>

	* java/awt/GraphicsConfiguration.java
	(createCompatibleVolatileImage(int,int,ImageCapabilities): Provide
	default implementation that delegates to
	createCompatibleVolatileImage(int,int).
	(createCompatibleVolatileImage(int,int,ImageCapabilities,int):
	New method from JDK5 spec. Default implementation by delegating to
	(createCompatibleVolatileImage(int,int,int).

2007-02-09  Tom Tromey  <tromey@redhat.com>

	PR libgcj/30647:
	* configure.ac: Also check for jack/jack.h.

2007-02-09  Mario Torre  <neugens@limasoftware.net>

	* java/io/File.java: remove import for
	gnu.classpath.NotImplementedException.
	(getUsableSpace): removed stub.
	(getFreeSpace): likewise.
	(getTotalSpace): likewise.

2007-02-09  Mario Torre  <neugens@limasoftware.net>

	* vm/reference/java/io/VMFile.java: 
	(canExecute): new 1.6 native method.
	(setReadable): likewise.
	(setWritable): likewise.
	(setExecutable): likewise.
	* java/io/File.java: added import for gnu.classpath.NotImplementedException.
	(setReadOnly): new 1.6 method.
	(canExecute): likewise. 
	(setReadable): likewise. 
	(setWritable): likewise.
	(setExecutable): likewise.
	(getUsableSpace): added stub for new 1.6 method.
	(getFreeSpace): likewise.
	(getTotalSpace): likewise.
	(checkExec): new private method to support new 1.6 additions.
	* native/jni/java-io/java_io_VMFile.c:
	set_file_permissions: new helper function.
	Java_java_io_VMFile_setReadable: new native method to bakcup 1.6 methods
	in VMFile.java.
	Java_java_io_VMFile_setWritable: likewise. 
	Java_java_io_VMFile_setExecutable: likewise. 
	Java_java_io_VMFile_canExecute: likewise. 
	* native/jni/native-lib/cpio.h: added new flags: CPFILE_FLAG_EXEC,
	CPFILE_FLAG_USR and CPFILE_FLAG_OFF.